--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.6",
-        "oro/platform": "1.10.*"
+        "oro/platform": "1.10.*|^2.0"
     },
     "autoload": {
         "psr-4": { "Ds\\Bundle\\ApiBundle\\": "" }
