--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
-        "oro/platform": "1.10.*|^2.0"
+        "php": ">=7.1",
+        "oro/platform": "^3.1"
     },
     "autoload": {
         "psr-4": { "Ds\\Bundle\\ApiBundle\\": "" }
